--- a/CSS-3/nav-vertical-servicos.html
+++ b/CSS-3/nav-vertical-servicos.html
@@ -3,7 +3,7 @@
     <head>
         <title>Navegation Bar Vertical</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type=text/css href="../CSS/nav-vertical.css">
+        <link rel="stylesheet" type=text/css href="CSS/nav-vertical.css">
     </head>
     <body id="servicos">
         <ul id="navegacao">
