--- a/CSS-3/arredondamento.html
+++ b/CSS-3/arredondamento.html
@@ -3,7 +3,7 @@
     <head>
         <title>Arredondamento com Imagens</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../CSS/arredondamento.css">
+        <link rel="stylesheet" href="CSS/arredondamento.css">
     </head>
     <body>
         <div class="caixa">
