--- a/CSS-3/layout.html
+++ b/CSS-3/layout.html
@@ -3,7 +3,7 @@
     <head>
         <title>Layout</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="./CSS/layout.css">
+        <link rel="stylesheet" href="/CSS/layout.css">
     </head>
     <body>
         <div id="container">
