--- a/Javascript-1/arquivos/index.html
+++ b/Javascript-1/arquivos/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <script src="js/eventos.js"></script>
+    <script src="../js/eventos.js"></script>
     <title>Javascript</title>
   </head>
 
