--- a/Ajax-1/filmes1.html
+++ b/Ajax-1/filmes1.html
@@ -9,7 +9,7 @@
         <script>
             function getFilmes(){
                 let xmlHttp = new XMLHttpRequest();
-                xmlHttp.open('get', 'http://localhost/ajax/filmes.xml');
+                xmlHttp.open('get', 'https://nepht022.github.io/studies/Ajax-1/filmes.xml');
 
                 xmlHttp.onreadystatechange = function(){
                     if(xmlHttp.status == 200 && xmlHttp.readyState == 4){
