--- a/Ecmascript-OO-2/optional_chaining.html
+++ b/Ecmascript-OO-2/optional_chaining.html
@@ -21,6 +21,6 @@
 
         console.log(obj[2021].janeiro?.pessoal)
         console.log(obj[2021].marco?.pessoal)//? após o atributo faz com que haja a tentativa de acessa-lo, 
-                                            //se ele exister, acessa o pessoal, se nao, retorna undefined
+                                            //se ele existir, acessa o pessoal, se nao, retorna undefined
     </script>
 </html>
